can: kvaser_usb: Assign netdev.dev_port based on device channel index (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33246,6 +33246,7 @@
 	patches.suse/wifi-ath12k-fix-endianness-handling-while-accessing-.patch
 	patches.suse/Bluetooth-hci_event-Mask-data-status-from-LE-ext-adv.patch
 	patches.suse/can-kvaser_pciefd-Store-device-channel-index.patch
+	patches.suse/can-kvaser_usb-Assign-netdev.dev_port-based-on-devic.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
