drm/msm/dpu: Fill in min_prefill_lines for SC8180X (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33253,6 +33253,7 @@
 	patches.suse/drm-rockchip-cleanup-fb-when-drm_gem_fb_afbc_init-fa.patch
 	patches.suse/drm-panfrost-Fix-panfrost-device-variable-name-in-de.patch
 	patches.suse/drm-vmwgfx-Fix-Host-Backed-userspace-on-Guest-Backed.patch
+	patches.suse/drm-msm-dpu-Fill-in-min_prefill_lines-for-SC8180X.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
