net: phy: micrel: fix KSZ8081/KSZ8091 cable test (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33248,6 +33248,7 @@
 	patches.suse/can-kvaser_pciefd-Store-device-channel-index.patch
 	patches.suse/can-kvaser_usb-Assign-netdev.dev_port-based-on-devic.patch
 	patches.suse/net-usbnet-Avoid-potential-RCU-stall-on-LINK_CHANGE-.patch
+	patches.suse/net-phy-micrel-fix-KSZ8081-KSZ8091-cable-test.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
