--- a/series.conf
+++ b/series.conf
@@ -33244,6 +33244,7 @@
 	patches.suse/wifi-ath12k-fix-dest-ring-buffer-corruption-when-rin.patch
 	patches.suse/wifi-ath11k-fix-sleeping-in-atomic-in-ath11k_mac_op_.patch
 	patches.suse/wifi-ath12k-fix-endianness-handling-while-accessing-.patch
+	patches.suse/Bluetooth-hci_event-Mask-data-status-from-LE-ext-adv.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
