--- a/series.conf
+++ b/series.conf
@@ -33222,6 +33222,7 @@
 	patches.suse/soc-qcom-pmic_glink-fix-OF-node-leak.patch
 	patches.suse/Docs-ABI-Fix-sysfs-kernel-address_bits-path.patch
 	patches.suse/wifi-rtw89-avoid-NULL-dereference-when-RX-problemati.patch
+	patches.suse/wifi-rtl818x-Kill-URBs-before-clearing-tx-status-que.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
