--- a/series.conf
+++ b/series.conf
@@ -33236,6 +33236,7 @@
 	patches.suse/wifi-brcmfmac-fix-P2P-discovery-failure-in-P2P-peer-.patch
 	patches.suse/wifi-ath11k-clear-initialized-flag-for-deinit-ed-srn.patch
 	patches.suse/wifi-ath11k-fix-suspend-use-after-free-after-probe-f.patch
+	patches.suse/wifi-ath11k-fix-dest-ring-buffer-corruption.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
