--- a/series.conf
+++ b/series.conf
@@ -33239,6 +33239,7 @@
 	patches.suse/wifi-ath11k-fix-dest-ring-buffer-corruption.patch
 	patches.suse/wifi-ath11k-fix-source-ring-buffer-corruption.patch
 	patches.suse/wifi-ath11k-fix-dest-ring-buffer-corruption-when-rin.patch
+	patches.suse/wifi-ath12k-fix-dest-ring-buffer-corruption.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
