--- a/series.conf
+++ b/series.conf
@@ -33251,6 +33251,7 @@
 	patches.suse/net-phy-micrel-fix-KSZ8081-KSZ8091-cable-test.patch
 	patches.suse/can-peak_usb-fix-USB-FD-devices-potential-malfunctio.patch
 	patches.suse/drm-rockchip-cleanup-fb-when-drm_gem_fb_afbc_init-fa.patch
+	patches.suse/drm-panfrost-Fix-panfrost-device-variable-name-in-de.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
