wifi: rtw89: avoid NULL dereference when RX problematic packet on unsupported 6 GHz band (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33221,6 +33221,7 @@
 	patches.suse/soc-qcom-fix-endianness-for-QMI-header.patch
 	patches.suse/soc-qcom-pmic_glink-fix-OF-node-leak.patch
 	patches.suse/Docs-ABI-Fix-sysfs-kernel-address_bits-path.patch
+	patches.suse/wifi-rtw89-avoid-NULL-dereference-when-RX-problemati.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
