net: usbnet: Avoid potential RCU stall on LINK_CHANGE event (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33247,6 +33247,7 @@
 	patches.suse/Bluetooth-hci_event-Mask-data-status-from-LE-ext-adv.patch
 	patches.suse/can-kvaser_pciefd-Store-device-channel-index.patch
 	patches.suse/can-kvaser_usb-Assign-netdev.dev_port-based-on-devic.patch
+	patches.suse/net-usbnet-Avoid-potential-RCU-stall-on-LINK_CHANGE-.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
