--- a/series.conf
+++ b/series.conf
@@ -33230,6 +33230,7 @@
 	patches.suse/wifi-mac80211-reject-TDLS-operations-when-station-is.patch
 	patches.suse/wifi-plfxlc-Fix-error-handling-in-usb-driver-probe.patch
 	patches.suse/wifi-mac80211-Do-not-schedule-stopped-TXQs.patch
+	patches.suse/wifi-mac80211-Don-t-call-fq_flow_idx-for-management-.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
