wifi: iwlwifi: return ERR_PTR from opmode start() (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -30393,6 +30393,7 @@
 	patches.suse/wifi-wlcore-fix-unbalanced-pm_runtime-calls.patch
 	patches.suse/wifi-brcmfmac-Check-the-return-value-of-of_property_.patch
 	patches.suse/wifi-iwlwifi-fw-read-STEP-table-from-correct-UEFI-va.patch
+	patches.suse/wifi-iwlwifi-return-ERR_PTR-from-opmode-start.patch
 	patches.suse/wifi-iwlwifi-avoid-memory-leak.patch
 	patches.suse/wifi-mac80211-prohibit-deactivating-all-links.patch
 	patches.suse/wifi-mac80211-fix-tid-removal-during-mesh-forwarding.patch
