--- a/series.conf
+++ b/series.conf
@@ -33226,6 +33226,7 @@
 	patches.suse/wifi-rtl818x-Kill-URBs-before-clearing-tx-status-que.patch
 	patches.suse/wifi-iwlwifi-Fix-memory-leak-in-iwl_mvm_init.patch
 	patches.suse/iwlwifi-Add-missing-check-for-alloc_ordered_workqueu.patch
+	patches.suse/wifi-iwlwifi-Fix-error-code-in-iwl_op_mode_dvm_start.patch
 	patches.suse/mwl8k-Add-missing-check-after-DMA-map.patch
 	patches.suse/wifi-brcmsmac-Remove-const-from-tbl_ptr-parameter-in.patch
 	patches.suse/wifi-mac80211-reject-TDLS-operations-when-station-is.patch
