drm/panthor: Add missing explicit padding in drm_panthor_gpu_info (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -54252,6 +54252,7 @@
 	patches.suse/wifi-mac80211-Write-cnt-before-copying-in-ieee80211_.patch
 	patches.suse/wifi-nl80211-Set-num_sub_specs-before-looping-throug.patch
 	patches.suse/drm-connector-hdmi-Evaluate-limited-range-after-comp.patch
+	patches.suse/drm-panthor-Add-missing-explicit-padding-in-drm_pant.patch
 
 	# netdev/net-next main
 	patches.suse/dt-bindings-dpll-Add-DPLL-device-and-pin.patch
