drm/connector: hdmi: Evaluate limited range after computing format (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -54251,6 +54251,7 @@
 	patches.suse/wifi-ath12k-Pass-ab-pointer-directly-to-ath12k_dp_tx.patch
 	patches.suse/wifi-mac80211-Write-cnt-before-copying-in-ieee80211_.patch
 	patches.suse/wifi-nl80211-Set-num_sub_specs-before-looping-throug.patch
+	patches.suse/drm-connector-hdmi-Evaluate-limited-range-after-comp.patch
 
 	# netdev/net-next main
 	patches.suse/dt-bindings-dpll-Add-DPLL-device-and-pin.patch
