drm/amdgpu/gfx10: fix kiq locking in KCQ reset (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -54257,6 +54257,7 @@
 	patches.suse/drm-xe-uapi-Correct-sync-type-definition-in-comments.patch
 	patches.suse/drm-amdgpu-gfx9-fix-kiq-locking-in-KCQ-reset.patch
 	patches.suse/drm-amdgpu-gfx9.4.3-fix-kiq-locking-in-KCQ-reset.patch
+	patches.suse/drm-amdgpu-gfx10-fix-kiq-locking-in-KCQ-reset.patch
 
 	# netdev/net-next main
 	patches.suse/dt-bindings-dpll-Add-DPLL-device-and-pin.patch
