--- a/series.conf
+++ b/series.conf
@@ -54253,6 +54253,7 @@
 	patches.suse/wifi-nl80211-Set-num_sub_specs-before-looping-throug.patch
 	patches.suse/drm-connector-hdmi-Evaluate-limited-range-after-comp.patch
 	patches.suse/drm-panthor-Add-missing-explicit-padding-in-drm_pant.patch
+	patches.suse/drm-amdgpu-Remove-nbiov7.9-replay-count-reporting.patch
 
 	# netdev/net-next main
 	patches.suse/dt-bindings-dpll-Add-DPLL-device-and-pin.patch
