wifi: mac80211: Write cnt before copying in ieee80211_copy_rnr_beacon() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -54249,6 +54249,7 @@
 	patches.suse/soc-qcom-pmic_glink-fix-OF-node-leak.patch
 	patches.suse/Docs-ABI-Fix-sysfs-kernel-address_bits-path.patch
 	patches.suse/wifi-ath12k-Pass-ab-pointer-directly-to-ath12k_dp_tx.patch
+	patches.suse/wifi-mac80211-Write-cnt-before-copying-in-ieee80211_.patch
 
 	# netdev/net-next main
 	patches.suse/dt-bindings-dpll-Add-DPLL-device-and-pin.patch
