--- a/series.conf
+++ b/series.conf
@@ -54254,6 +54254,7 @@
 	patches.suse/drm-connector-hdmi-Evaluate-limited-range-after-comp.patch
 	patches.suse/drm-panthor-Add-missing-explicit-padding-in-drm_pant.patch
 	patches.suse/drm-amdgpu-Remove-nbiov7.9-replay-count-reporting.patch
+	patches.suse/drm-xe-uapi-Correct-sync-type-definition-in-comments.patch
 
 	# netdev/net-next main
 	patches.suse/dt-bindings-dpll-Add-DPLL-device-and-pin.patch
