drm/amdgpu/gfx9: fix kiq locking in KCQ reset (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -54255,6 +54255,7 @@
 	patches.suse/drm-panthor-Add-missing-explicit-padding-in-drm_pant.patch
 	patches.suse/drm-amdgpu-Remove-nbiov7.9-replay-count-reporting.patch
 	patches.suse/drm-xe-uapi-Correct-sync-type-definition-in-comments.patch
+	patches.suse/drm-amdgpu-gfx9-fix-kiq-locking-in-KCQ-reset.patch
 
 	# netdev/net-next main
 	patches.suse/dt-bindings-dpll-Add-DPLL-device-and-pin.patch
