--- a/series.conf
+++ b/series.conf
@@ -54256,6 +54256,7 @@
 	patches.suse/drm-amdgpu-Remove-nbiov7.9-replay-count-reporting.patch
 	patches.suse/drm-xe-uapi-Correct-sync-type-definition-in-comments.patch
 	patches.suse/drm-amdgpu-gfx9-fix-kiq-locking-in-KCQ-reset.patch
+	patches.suse/drm-amdgpu-gfx9.4.3-fix-kiq-locking-in-KCQ-reset.patch
 
 	# netdev/net-next main
 	patches.suse/dt-bindings-dpll-Add-DPLL-device-and-pin.patch
