wifi: mac80211: Don't call fq_flow_idx() for management frames (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10423,6 +10423,7 @@
 	patches.suse/wifi-mac80211-reject-TDLS-operations-when-station-is.patch
 	patches.suse/wifi-plfxlc-Fix-error-handling-in-usb-driver-probe.patch
 	patches.suse/wifi-mac80211-Do-not-schedule-stopped-TXQs.patch
+	patches.suse/wifi-mac80211-Don-t-call-fq_flow_idx-for-management-.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
