fbcon: Fix outdated registered_fb reference in comment (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10452,6 +10452,7 @@
 	patches.suse/drm-vmwgfx-Fix-Host-Backed-userspace-on-Guest-Backed.patch
 	patches.suse/drm-amdgpu-Remove-nbiov7.9-replay-count-reporting.patch
 	patches.suse/drm-msm-dpu-Fill-in-min_prefill_lines-for-SC8180X.patch
+	patches.suse/fbcon-Fix-outdated-registered_fb-reference-in-commen.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
