drm/amdgpu/gfx10: fix kiq locking in KCQ reset (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10457,6 +10457,7 @@
 	patches.suse/drm-amd-pm-powerplay-hwmgr-smu_helper-fix-order-of-m.patch
 	patches.suse/drm-amdgpu-gfx9-fix-kiq-locking-in-KCQ-reset.patch
 	patches.suse/drm-amdgpu-gfx9.4.3-fix-kiq-locking-in-KCQ-reset.patch
+	patches.suse/drm-amdgpu-gfx10-fix-kiq-locking-in-KCQ-reset.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
