wifi: iwlwifi: Fix memory leak in iwl_mvm_init() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10414,6 +10414,7 @@
 	patches.suse/wifi-ath12k-Pass-ab-pointer-directly-to-ath12k_dp_tx.patch
 	patches.suse/wifi-rtw89-avoid-NULL-dereference-when-RX-problemati.patch
 	patches.suse/wifi-rtl818x-Kill-URBs-before-clearing-tx-status-que.patch
+	patches.suse/wifi-iwlwifi-Fix-memory-leak-in-iwl_mvm_init.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
