drm/amdgpu: Remove nbiov7.9 replay count reporting (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10450,6 +10450,7 @@
 	patches.suse/drm-panfrost-Fix-panfrost-device-variable-name-in-de.patch
 	patches.suse/drm-panthor-Add-missing-explicit-padding-in-drm_pant.patch
 	patches.suse/drm-vmwgfx-Fix-Host-Backed-userspace-on-Guest-Backed.patch
+	patches.suse/drm-amdgpu-Remove-nbiov7.9-replay-count-reporting.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
