drm/connector: hdmi: Evaluate limited range after computing format (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10446,6 +10446,7 @@
 	patches.suse/net-phy-micrel-fix-KSZ8081-KSZ8091-cable-test.patch
 	patches.suse/can-peak_usb-fix-USB-FD-devices-potential-malfunctio.patch
 	patches.suse/drm-rockchip-cleanup-fb-when-drm_gem_fb_afbc_init-fa.patch
+	patches.suse/drm-connector-hdmi-Evaluate-limited-range-after-comp.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
