--- a/series.conf
+++ b/series.conf
@@ -10435,6 +10435,7 @@
 	patches.suse/wifi-ath12k-fix-dest-ring-buffer-corruption.patch
 	patches.suse/wifi-ath12k-fix-source-ring-buffer-corruption.patch
 	patches.suse/wifi-ath12k-fix-dest-ring-buffer-corruption-when-rin.patch
+	patches.suse/wifi-ath11k-fix-sleeping-in-atomic-in-ath11k_mac_op_.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
