--- a/series.conf
+++ b/series.conf
@@ -10449,6 +10449,7 @@
 	patches.suse/drm-connector-hdmi-Evaluate-limited-range-after-comp.patch
 	patches.suse/drm-panfrost-Fix-panfrost-device-variable-name-in-de.patch
 	patches.suse/drm-panthor-Add-missing-explicit-padding-in-drm_pant.patch
+	patches.suse/drm-vmwgfx-Fix-Host-Backed-userspace-on-Guest-Backed.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
