--- a/series.conf
+++ b/series.conf
@@ -10426,6 +10426,7 @@
 	patches.suse/wifi-mac80211-Don-t-call-fq_flow_idx-for-management-.patch
 	patches.suse/wifi-mac80211-Check-802.11-encaps-offloading-in-ieee.patch
 	patches.suse/Reapply-wifi-mac80211-Update-skb-s-control-block-key.patch
+	patches.suse/wifi-brcmfmac-fix-P2P-discovery-failure-in-P2P-peer-.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
