--- a/series.conf
+++ b/series.conf
@@ -10451,6 +10451,7 @@
 	patches.suse/drm-panthor-Add-missing-explicit-padding-in-drm_pant.patch
 	patches.suse/drm-vmwgfx-Fix-Host-Backed-userspace-on-Guest-Backed.patch
 	patches.suse/drm-amdgpu-Remove-nbiov7.9-replay-count-reporting.patch
+	patches.suse/drm-msm-dpu-Fill-in-min_prefill_lines-for-SC8180X.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
