--- a/series.conf
+++ b/series.conf
@@ -10455,6 +10455,7 @@
 	patches.suse/fbcon-Fix-outdated-registered_fb-reference-in-commen.patch
 	patches.suse/drm-xe-uapi-Correct-sync-type-definition-in-comments.patch
 	patches.suse/drm-amd-pm-powerplay-hwmgr-smu_helper-fix-order-of-m.patch
+	patches.suse/drm-amdgpu-gfx9-fix-kiq-locking-in-KCQ-reset.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
