wifi: ath11k: fix dest ring-buffer corruption (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10429,6 +10429,7 @@
 	patches.suse/wifi-brcmfmac-fix-P2P-discovery-failure-in-P2P-peer-.patch
 	patches.suse/wifi-ath11k-clear-initialized-flag-for-deinit-ed-srn.patch
 	patches.suse/wifi-ath11k-fix-suspend-use-after-free-after-probe-f.patch
+	patches.suse/wifi-ath11k-fix-dest-ring-buffer-corruption.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
