--- a/series.conf
+++ b/series.conf
@@ -10419,6 +10419,7 @@
 	patches.suse/mwl8k-Add-missing-check-after-DMA-map.patch
 	patches.suse/wifi-rtl8xxxu-Fix-RX-skb-size-for-aggregation-disabl.patch
 	patches.suse/wifi-rtw88-Fix-macid-assigned-to-TDLS-station.patch
+	patches.suse/wifi-brcmsmac-Remove-const-from-tbl_ptr-parameter-in.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
