--- a/series.conf
+++ b/series.conf
@@ -10411,6 +10411,7 @@
 	patches.suse/x86-fpu-Delay-instruction-pointer-fixup-until-after-warnin.patch
 	patches.suse/s390-mm-Remove-possible-false-positive-warning-in-pte_free.patch
 	patches.suse/staging-media-atomisp-Fix-stack-buffer-overflow-in-g.patch
+	patches.suse/wifi-ath12k-Pass-ab-pointer-directly-to-ath12k_dp_tx.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
