--- a/series.conf
+++ b/series.conf
@@ -10431,6 +10431,7 @@
 	patches.suse/wifi-ath11k-fix-suspend-use-after-free-after-probe-f.patch
 	patches.suse/wifi-ath11k-fix-dest-ring-buffer-corruption.patch
 	patches.suse/wifi-ath11k-fix-source-ring-buffer-corruption.patch
+	patches.suse/wifi-ath11k-fix-dest-ring-buffer-corruption-when-rin.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
