--- a/series.conf
+++ b/series.conf
@@ -10413,6 +10413,7 @@
 	patches.suse/staging-media-atomisp-Fix-stack-buffer-overflow-in-g.patch
 	patches.suse/wifi-ath12k-Pass-ab-pointer-directly-to-ath12k_dp_tx.patch
 	patches.suse/wifi-rtw89-avoid-NULL-dereference-when-RX-problemati.patch
+	patches.suse/wifi-rtl818x-Kill-URBs-before-clearing-tx-status-que.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
