drm/xe/uapi: Correct sync type definition in comments (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10453,6 +10453,7 @@
 	patches.suse/drm-amdgpu-Remove-nbiov7.9-replay-count-reporting.patch
 	patches.suse/drm-msm-dpu-Fill-in-min_prefill_lines-for-SC8180X.patch
 	patches.suse/fbcon-Fix-outdated-registered_fb-reference-in-commen.patch
+	patches.suse/drm-xe-uapi-Correct-sync-type-definition-in-comments.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
