drm/panfrost: Fix panfrost device variable name in devfreq (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10447,6 +10447,7 @@
 	patches.suse/can-peak_usb-fix-USB-FD-devices-potential-malfunctio.patch
 	patches.suse/drm-rockchip-cleanup-fb-when-drm_gem_fb_afbc_init-fa.patch
 	patches.suse/drm-connector-hdmi-Evaluate-limited-range-after-comp.patch
+	patches.suse/drm-panfrost-Fix-panfrost-device-variable-name-in-de.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
