wifi: rtw89: avoid NULL dereference when RX problematic packet on unsupported 6 GHz band (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10412,6 +10412,7 @@
 	patches.suse/s390-mm-Remove-possible-false-positive-warning-in-pte_free.patch
 	patches.suse/staging-media-atomisp-Fix-stack-buffer-overflow-in-g.patch
 	patches.suse/wifi-ath12k-Pass-ab-pointer-directly-to-ath12k_dp_tx.patch
+	patches.suse/wifi-rtw89-avoid-NULL-dereference-when-RX-problemati.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
