--- a/series.conf
+++ b/series.conf
@@ -10433,6 +10433,7 @@
 	patches.suse/wifi-ath11k-fix-source-ring-buffer-corruption.patch
 	patches.suse/wifi-ath11k-fix-dest-ring-buffer-corruption-when-rin.patch
 	patches.suse/wifi-ath12k-fix-dest-ring-buffer-corruption.patch
+	patches.suse/wifi-ath12k-fix-source-ring-buffer-corruption.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
