drm/panthor: Add missing explicit padding in drm_panthor_gpu_info (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10448,6 +10448,7 @@
 	patches.suse/drm-rockchip-cleanup-fb-when-drm_gem_fb_afbc_init-fa.patch
 	patches.suse/drm-connector-hdmi-Evaluate-limited-range-after-comp.patch
 	patches.suse/drm-panfrost-Fix-panfrost-device-variable-name-in-de.patch
+	patches.suse/drm-panthor-Add-missing-explicit-padding-in-drm_pant.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
