--- a/series.conf
+++ b/series.conf
@@ -10439,6 +10439,7 @@
 	patches.suse/wifi-ath12k-fix-endianness-handling-while-accessing-.patch
 	patches.suse/wifi-mac80211-Write-cnt-before-copying-in-ieee80211_.patch
 	patches.suse/wifi-nl80211-Set-num_sub_specs-before-looping-throug.patch
+	patches.suse/Bluetooth-hci_event-Mask-data-status-from-LE-ext-adv.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
