can: kvaser_usb: Assign netdev.dev_port based on device channel index (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10441,6 +10441,7 @@
 	patches.suse/wifi-nl80211-Set-num_sub_specs-before-looping-throug.patch
 	patches.suse/Bluetooth-hci_event-Mask-data-status-from-LE-ext-adv.patch
 	patches.suse/can-kvaser_pciefd-Store-device-channel-index.patch
+	patches.suse/can-kvaser_usb-Assign-netdev.dev_port-based-on-devic.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
