--- a/series.conf
+++ b/series.conf
@@ -10422,6 +10422,7 @@
 	patches.suse/wifi-brcmsmac-Remove-const-from-tbl_ptr-parameter-in.patch
 	patches.suse/wifi-mac80211-reject-TDLS-operations-when-station-is.patch
 	patches.suse/wifi-plfxlc-Fix-error-handling-in-usb-driver-probe.patch
+	patches.suse/wifi-mac80211-Do-not-schedule-stopped-TXQs.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
