wifi: rtl8xxxu: Fix RX skb size for aggregation disabled (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10417,6 +10417,7 @@
 	patches.suse/wifi-iwlwifi-Fix-memory-leak-in-iwl_mvm_init.patch
 	patches.suse/iwlwifi-Add-missing-check-for-alloc_ordered_workqueu.patch
 	patches.suse/mwl8k-Add-missing-check-after-DMA-map.patch
+	patches.suse/wifi-rtl8xxxu-Fix-RX-skb-size-for-aggregation-disabl.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
