wifi: ath11k: fix suspend use-after-free after probe failure (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10428,6 +10428,7 @@
 	patches.suse/Reapply-wifi-mac80211-Update-skb-s-control-block-key.patch
 	patches.suse/wifi-brcmfmac-fix-P2P-discovery-failure-in-P2P-peer-.patch
 	patches.suse/wifi-ath11k-clear-initialized-flag-for-deinit-ed-srn.patch
+	patches.suse/wifi-ath11k-fix-suspend-use-after-free-after-probe-f.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
