--- a/series.conf
+++ b/series.conf
@@ -10443,6 +10443,7 @@
 	patches.suse/can-kvaser_pciefd-Store-device-channel-index.patch
 	patches.suse/can-kvaser_usb-Assign-netdev.dev_port-based-on-devic.patch
 	patches.suse/net-usbnet-Avoid-potential-RCU-stall-on-LINK_CHANGE-.patch
+	patches.suse/net-phy-micrel-fix-KSZ8081-KSZ8091-cable-test.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
