can: peak_usb: fix USB FD devices potential malfunction (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10444,6 +10444,7 @@
 	patches.suse/can-kvaser_usb-Assign-netdev.dev_port-based-on-devic.patch
 	patches.suse/net-usbnet-Avoid-potential-RCU-stall-on-LINK_CHANGE-.patch
 	patches.suse/net-phy-micrel-fix-KSZ8081-KSZ8091-cable-test.patch
+	patches.suse/can-peak_usb-fix-USB-FD-devices-potential-malfunctio.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
