mwl8k: Add missing check after DMA map (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10416,6 +10416,7 @@
 	patches.suse/wifi-rtl818x-Kill-URBs-before-clearing-tx-status-que.patch
 	patches.suse/wifi-iwlwifi-Fix-memory-leak-in-iwl_mvm_init.patch
 	patches.suse/iwlwifi-Add-missing-check-for-alloc_ordered_workqueu.patch
+	patches.suse/mwl8k-Add-missing-check-after-DMA-map.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
