--- a/series.conf
+++ b/series.conf
@@ -10437,6 +10437,7 @@
 	patches.suse/wifi-ath12k-fix-dest-ring-buffer-corruption-when-rin.patch
 	patches.suse/wifi-ath11k-fix-sleeping-in-atomic-in-ath11k_mac_op_.patch
 	patches.suse/wifi-ath12k-fix-endianness-handling-while-accessing-.patch
+	patches.suse/wifi-mac80211-Write-cnt-before-copying-in-ieee80211_.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
