wifi: iwlwifi: return ERR_PTR from opmode start() (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -4370,6 +4370,7 @@
 	patches.suse/wifi-brcmfmac-Check-the-return-value-of-of_property_.patch
 	patches.suse/wifi-iwlwifi-pcie-Add-support-for-new-device-ids.patch
 	patches.suse/wifi-iwlwifi-fw-read-STEP-table-from-correct-UEFI-va.patch
+	patches.suse/wifi-iwlwifi-return-ERR_PTR-from-opmode-start.patch
 	patches.suse/wifi-iwlwifi-avoid-memory-leak.patch
 	patches.suse/wifi-iwlwifi-mvm-avoid-NULL-pointer-dereference.patch
 	patches.suse/wifi-iwlwifi-mvm-don-t-count-mgmt-frames-as-MPDU.patch
