wifi: iwlwifi: Fix error code in iwl_op_mode_dvm_start() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10417,6 +10417,7 @@
 	patches.suse/wifi-rtl818x-Kill-URBs-before-clearing-tx-status-que.patch
 	patches.suse/wifi-iwlwifi-Fix-memory-leak-in-iwl_mvm_init.patch
 	patches.suse/iwlwifi-Add-missing-check-for-alloc_ordered_workqueu.patch
+	patches.suse/wifi-iwlwifi-Fix-error-code-in-iwl_op_mode_dvm_start.patch
 	patches.suse/mwl8k-Add-missing-check-after-DMA-map.patch
 	patches.suse/wifi-rtl8xxxu-Fix-RX-skb-size-for-aggregation-disabl.patch
 	patches.suse/wifi-rtw88-Fix-macid-assigned-to-TDLS-station.patch
