- clocksource: Scale the watchdog read retries automatically   (bsc#1241345 bsc#1244457). - Refresh   patches.suse/clocksource-Fix-brown-bag-boolean-thinko-in-cs_watch.patch. - Refresh   patches.suse/clocksource-Make-watchdog-and-suspend-timing-multipl.patch.

--- a/series.conf
+++ b/series.conf
@@ -22252,6 +22252,7 @@
 	patches.suse/timekeeping-Fix-cross-timestamp-interpolation-on-cou.patch
 	patches.suse/timekeeping-Fix-cross-timestamp-interpolation-corner.patch
 	patches.suse/timekeeping-Fix-cross-timestamp-interpolation-for-no.patch
+	patches.suse/clocksource-Scale-the-watchdog-read-retries-automati.patch
 	patches.suse/x86-resctrl-Remove-hard-coded-memory-bandwidth-limit.patch
 	patches.suse/x86-resctrl-Read-supported-bandwidth-sources-from-CPUID.patch
 	patches.suse/x86-resctrl-Remove-redundant-variable-in-mbm_config_write_.patch
