clocksource: Set cs_watchdog_read() checks based on .uncertainty_margin (bsc#1241345 bsc#1244457).

--- a/series.conf
+++ b/series.conf
@@ -27907,6 +27907,7 @@
 	patches.suse/block-fix-potential-invalid-pointer-dereference-in-bl.patch
 	patches.suse/nvme-tcp-fix-link-failure-for-TCP-auth.patch
 	patches.suse/nvme-pci-qdepth-1-quirk.patch
+	patches.suse/clocksource-Set-cs_watchdog_read-checks-based-on-.un.patch
 	patches.suse/signal-Replace-BUG_ON-s.patch
 	patches.suse/clocksource-drivers-qcom-Add-missing-iounmap-on-erro.patch
 	patches.suse/printk-Add-notation-to-console_srcu-locking.patch
