x86: UV RTC: Add parameter to disable RTC clocksource (bsc#1241345).

--- a/series.conf
+++ b/series.conf
@@ -33494,6 +33494,8 @@
 
 	# bsc#1215885 bsc#1218105 - A workaround for misbehaving clocksources
 	patches.suse/clocksource-disable-watchdog-checks-on-TSC-when-TSC-.patch
+	# bsc#1241345 - A workaround for misbehaving sgi_rtc clocksources
+	patches.suse/x86-UV-RTC-Add-parameter-to-disable-RTC-clocksource.patch
 
 	########################################################
 	# PM
