RDMA/uverbs: Check CAP_NET_RAW in user namespace for flow create (git-fixes)

--- a/series.conf
+++ b/series.conf
@@ -33259,6 +33259,7 @@
 	patches.suse/drm-msm-dpu-Fill-in-min_prefill_lines-for-SC8180X.patch
 	patches.suse/fbcon-Fix-outdated-registered_fb-reference-in-commen.patch
 	patches.suse/drm-amd-pm-powerplay-hwmgr-smu_helper-fix-order-of-m.patch
+	patches.suse/RDMA-uverbs-Check-CAP_NET_RAW-in-user-namespace-for-.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
