RDMA/mlx5: Check CAP_NET_RAW in user namespace for flow create (git-fixes)

--- a/series.conf
+++ b/series.conf
@@ -33260,6 +33260,7 @@
 	patches.suse/fbcon-Fix-outdated-registered_fb-reference-in-commen.patch
 	patches.suse/drm-amd-pm-powerplay-hwmgr-smu_helper-fix-order-of-m.patch
 	patches.suse/RDMA-uverbs-Check-CAP_NET_RAW-in-user-namespace-for-.patch
+	patches.suse/RDMA-mlx5-Check-CAP_NET_RAW-in-user-namespace-for-fl.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
