RDMA/mlx5: Check CAP_NET_RAW in user namespace for flow create (git-fixes)

--- a/series.conf
+++ b/series.conf
@@ -50521,6 +50521,7 @@
 	patches.suse/wifi-ath10k-shutdown-driver-when-hardware-is-unrelia.patch
 	patches.suse/RDMA-hfi1-fix-possible-divide-by-zero-in-find_hw_thr.patch
 	patches.suse/RDMA-uverbs-Check-CAP_NET_RAW-in-user-namespace-for-.patch
+	patches.suse/RDMA-mlx5-Check-CAP_NET_RAW-in-user-namespace-for-fl.patch
 	patches.suse/perf-core-Don-t-leak-AUX-buffer-refcount-on-allocation-fai.patch
 	patches.suse/perf-core-Exit-early-on-perf_mmap-fail.patch
 	patches.suse/perf-core-Prevent-VMA-split-of-buffer-mappings.patch
