RDMA/mlx5: Check CAP_NET_RAW in user namespace for anchor create (git-fixes)

--- a/series.conf
+++ b/series.conf
@@ -33261,6 +33261,7 @@
 	patches.suse/drm-amd-pm-powerplay-hwmgr-smu_helper-fix-order-of-m.patch
 	patches.suse/RDMA-uverbs-Check-CAP_NET_RAW-in-user-namespace-for-.patch
 	patches.suse/RDMA-mlx5-Check-CAP_NET_RAW-in-user-namespace-for-fl.patch
+	patches.suse/RDMA-mlx5-Check-CAP_NET_RAW-in-user-namespace-for-an.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
