--- a/series.conf
+++ b/series.conf
@@ -50523,6 +50523,7 @@
 	patches.suse/RDMA-uverbs-Check-CAP_NET_RAW-in-user-namespace-for-.patch
 	patches.suse/RDMA-mlx5-Check-CAP_NET_RAW-in-user-namespace-for-fl.patch
 	patches.suse/RDMA-mlx5-Check-CAP_NET_RAW-in-user-namespace-for-an.patch
+	patches.suse/RDMA-uverbs-Check-CAP_NET_RAW-in-user-namespace-for-QP-create.patch
 	patches.suse/perf-core-Don-t-leak-AUX-buffer-refcount-on-allocation-fai.patch
 	patches.suse/perf-core-Exit-early-on-perf_mmap-fail.patch
 	patches.suse/perf-core-Prevent-VMA-split-of-buffer-mappings.patch
