--- a/series.conf
+++ b/series.conf
@@ -33264,6 +33264,7 @@
 	patches.suse/RDMA-mlx5-Check-CAP_NET_RAW-in-user-namespace-for-an.patch
 	patches.suse/RDMA-uverbs-Check-CAP_NET_RAW-in-user-namespace-for-QP-create.patch
 	patches.suse/RDMA-uverbs-Check-CAP_NET_RAW-in-user-namespace-for-RAW-QP-create.patch
+	patches.suse/RDMA-mlx5-Check-CAP_NET_RAW-in-user-namespace-for-de.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
