RDMA/mlx5: Check CAP_NET_RAW in user namespace for anchor create (git-fixes)

--- a/series.conf
+++ b/series.conf
@@ -10469,6 +10469,7 @@
 	patches.suse/drm-amdgpu-gfx10-fix-kiq-locking-in-KCQ-reset.patch
 	patches.suse/RDMA-uverbs-Check-CAP_NET_RAW-in-user-namespace-for-.patch
 	patches.suse/RDMA-mlx5-Check-CAP_NET_RAW-in-user-namespace-for-fl.patch
+	patches.suse/RDMA-mlx5-Check-CAP_NET_RAW-in-user-namespace-for-an.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
