--- a/series.conf
+++ b/series.conf
@@ -10470,6 +10470,7 @@
 	patches.suse/RDMA-uverbs-Check-CAP_NET_RAW-in-user-namespace-for-.patch
 	patches.suse/RDMA-mlx5-Check-CAP_NET_RAW-in-user-namespace-for-fl.patch
 	patches.suse/RDMA-mlx5-Check-CAP_NET_RAW-in-user-namespace-for-an.patch
+	patches.suse/RDMA-uverbs-Check-CAP_NET_RAW-in-user-namespace-for-QP-create.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
