RDMA/counter: Check CAP_NET_RAW check in user namespace for RDMA counters (git-fixes)

--- a/series.conf
+++ b/series.conf
@@ -33266,6 +33266,7 @@
 	patches.suse/RDMA-uverbs-Check-CAP_NET_RAW-in-user-namespace-for-RAW-QP-create.patch
 	patches.suse/RDMA-mlx5-Check-CAP_NET_RAW-in-user-namespace-for-de.patch
 	patches.suse/RDMA-nldev-Check-CAP_NET_RAW-in-user-namespace-for-Q.patch
+	patches.suse/RDMA-counter-Check-CAP_NET_RAW-check-in-user-namespa.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
