--- a/series.conf
+++ b/series.conf
@@ -33267,6 +33267,7 @@
 	patches.suse/RDMA-mlx5-Check-CAP_NET_RAW-in-user-namespace-for-de.patch
 	patches.suse/RDMA-nldev-Check-CAP_NET_RAW-in-user-namespace-for-Q.patch
 	patches.suse/RDMA-counter-Check-CAP_NET_RAW-check-in-user-namespa.patch
+	patches.suse/Fix-dma_unmap_sg-nents-value.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
