RDMA/mlx5: Check CAP_NET_RAW in user namespace for devx create (git-fixes)

--- a/series.conf
+++ b/series.conf
@@ -10472,6 +10472,7 @@
 	patches.suse/RDMA-mlx5-Check-CAP_NET_RAW-in-user-namespace-for-an.patch
 	patches.suse/RDMA-uverbs-Check-CAP_NET_RAW-in-user-namespace-for-QP-create.patch
 	patches.suse/RDMA-uverbs-Check-CAP_NET_RAW-in-user-namespace-for-RAW-QP-create.patch
+	patches.suse/RDMA-mlx5-Check-CAP_NET_RAW-in-user-namespace-for-de.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
