--- a/series.conf
+++ b/series.conf
@@ -33268,6 +33268,7 @@
 	patches.suse/RDMA-nldev-Check-CAP_NET_RAW-in-user-namespace-for-Q.patch
 	patches.suse/RDMA-counter-Check-CAP_NET_RAW-check-in-user-namespa.patch
 	patches.suse/Fix-dma_unmap_sg-nents-value.patch
+	patches.suse/RDMA-hns-Fix-double-destruction-of-rsv_qp.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
