--- a/series.conf
+++ b/series.conf
@@ -10473,6 +10473,7 @@
 	patches.suse/RDMA-uverbs-Check-CAP_NET_RAW-in-user-namespace-for-QP-create.patch
 	patches.suse/RDMA-uverbs-Check-CAP_NET_RAW-in-user-namespace-for-RAW-QP-create.patch
 	patches.suse/RDMA-mlx5-Check-CAP_NET_RAW-in-user-namespace-for-de.patch
+	patches.suse/RDMA-nldev-Check-CAP_NET_RAW-in-user-namespace-for-Q.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
