RDMA/counter: Check CAP_NET_RAW check in user namespace for RDMA counters (git-fixes)

--- a/series.conf
+++ b/series.conf
@@ -10474,6 +10474,7 @@
 	patches.suse/RDMA-uverbs-Check-CAP_NET_RAW-in-user-namespace-for-RAW-QP-create.patch
 	patches.suse/RDMA-mlx5-Check-CAP_NET_RAW-in-user-namespace-for-de.patch
 	patches.suse/RDMA-nldev-Check-CAP_NET_RAW-in-user-namespace-for-Q.patch
+	patches.suse/RDMA-counter-Check-CAP_NET_RAW-check-in-user-namespa.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
