RDMA/hns: Fix HW configurations not cleared in error flow (git-fixes)

--- a/series.conf
+++ b/series.conf
@@ -33269,6 +33269,7 @@
 	patches.suse/RDMA-counter-Check-CAP_NET_RAW-check-in-user-namespa.patch
 	patches.suse/Fix-dma_unmap_sg-nents-value.patch
 	patches.suse/RDMA-hns-Fix-double-destruction-of-rsv_qp.patch
+	patches.suse/RDMA-hns-Fix-HW-configurations-not-cleared-in-error-.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
