Fix dma_unmap_sg() nents value (git-fixes)

--- a/series.conf
+++ b/series.conf
@@ -10475,6 +10475,7 @@
 	patches.suse/RDMA-mlx5-Check-CAP_NET_RAW-in-user-namespace-for-de.patch
 	patches.suse/RDMA-nldev-Check-CAP_NET_RAW-in-user-namespace-for-Q.patch
 	patches.suse/RDMA-counter-Check-CAP_NET_RAW-check-in-user-namespa.patch
+	patches.suse/Fix-dma_unmap_sg-nents-value.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
