RDMA/hns: Fix double destruction of rsv_qp (git-fixes)

--- a/series.conf
+++ b/series.conf
@@ -10476,6 +10476,7 @@
 	patches.suse/RDMA-nldev-Check-CAP_NET_RAW-in-user-namespace-for-Q.patch
 	patches.suse/RDMA-counter-Check-CAP_NET_RAW-check-in-user-namespa.patch
 	patches.suse/Fix-dma_unmap_sg-nents-value.patch
+	patches.suse/RDMA-hns-Fix-double-destruction-of-rsv_qp.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
