--- a/series.conf
+++ b/series.conf
@@ -10477,6 +10477,7 @@
 	patches.suse/RDMA-counter-Check-CAP_NET_RAW-check-in-user-namespa.patch
 	patches.suse/Fix-dma_unmap_sg-nents-value.patch
 	patches.suse/RDMA-hns-Fix-double-destruction-of-rsv_qp.patch
+	patches.suse/RDMA-hns-Fix-HW-configurations-not-cleared-in-error-.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
