--- a/series.conf
+++ b/series.conf
@@ -33270,6 +33270,7 @@
 	patches.suse/Fix-dma_unmap_sg-nents-value.patch
 	patches.suse/RDMA-hns-Fix-double-destruction-of-rsv_qp.patch
 	patches.suse/RDMA-hns-Fix-HW-configurations-not-cleared-in-error-.patch
+	patches.suse/RDMA-hns-Get-message-length-of-ack_req-from-FW.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
