RDMA/hns: Get message length of ack_req from FW (git-fixes)

--- a/series.conf
+++ b/series.conf
@@ -10478,6 +10478,7 @@
 	patches.suse/Fix-dma_unmap_sg-nents-value.patch
 	patches.suse/RDMA-hns-Fix-double-destruction-of-rsv_qp.patch
 	patches.suse/RDMA-hns-Fix-HW-configurations-not-cleared-in-error-.patch
+	patches.suse/RDMA-hns-Get-message-length-of-ack_req-from-FW.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
