--- a/series.conf
+++ b/series.conf
@@ -33271,6 +33271,7 @@
 	patches.suse/RDMA-hns-Fix-double-destruction-of-rsv_qp.patch
 	patches.suse/RDMA-hns-Fix-HW-configurations-not-cleared-in-error-.patch
 	patches.suse/RDMA-hns-Get-message-length-of-ack_req-from-FW.patch
+	patches.suse/RDMA-hns-Fix-accessing-uninitialized-resources.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
