--- a/series.conf
+++ b/series.conf
@@ -10480,6 +10480,7 @@
 	patches.suse/RDMA-hns-Fix-HW-configurations-not-cleared-in-error-.patch
 	patches.suse/RDMA-hns-Get-message-length-of-ack_req-from-FW.patch
 	patches.suse/RDMA-hns-Fix-accessing-uninitialized-resources.patch
+	patches.suse/RDMA-hns-Drop-GFP_NOWARN.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
