--- a/series.conf
+++ b/series.conf
@@ -33273,6 +33273,7 @@
 	patches.suse/RDMA-hns-Get-message-length-of-ack_req-from-FW.patch
 	patches.suse/RDMA-hns-Fix-accessing-uninitialized-resources.patch
 	patches.suse/RDMA-hns-Drop-GFP_NOWARN.patch
+	patches.suse/RDMA-hns-Fix-Wframe-larger-than-issue.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
