RDMA/hns: Fix -Wframe-larger-than issue (git-fixes)

--- a/series.conf
+++ b/series.conf
@@ -10481,6 +10481,7 @@
 	patches.suse/RDMA-hns-Get-message-length-of-ack_req-from-FW.patch
 	patches.suse/RDMA-hns-Fix-accessing-uninitialized-resources.patch
 	patches.suse/RDMA-hns-Drop-GFP_NOWARN.patch
+	patches.suse/RDMA-hns-Fix-Wframe-larger-than-issue.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
