--- a/series.conf
+++ b/series.conf
@@ -8993,6 +8993,7 @@
 	patches.suse/x86-bugs-Restructure-L1TF-mitigation.patch
 	patches.suse/x86-bugs-Restructure-SRSO-mitigation.patch
 	patches.suse/x86-platform-amd-Move-the-asm-amd_hsmp.h-header-to-asm-amd.patch
+	patches.suse/x86-cpu-Sanitize-CPUID-0x80000000-output.patch
 	patches.suse/x86-fpu-Refactor-xfeature-bitmask-update-code-for-sigframe.patch
 	patches.suse/x86-pkeys-Simplify-PKRU-update-in-signal-frame.patch
 	patches.suse/x86-microcode-AMD-Do-not-return-error-when-microcode-updat.patch
