x86/cacheinfo: Properly parse CPUID(0x80000005) L1d/L1i associativity (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -8992,6 +8992,7 @@
 	patches.suse/x86-bugs-Restructure-SSB-mitigation.patch
 	patches.suse/x86-bugs-Restructure-L1TF-mitigation.patch
 	patches.suse/x86-bugs-Restructure-SRSO-mitigation.patch
+	patches.suse/x86-cacheinfo-Properly-parse-CPUID-0x80000005-L1d-L1i-asso.patch
 	patches.suse/x86-platform-amd-Move-the-asm-amd_hsmp.h-header-to-asm-amd.patch
 	patches.suse/x86-cpu-Sanitize-CPUID-0x80000000-output.patch
 	patches.suse/x86-fpu-Refactor-xfeature-bitmask-update-code-for-sigframe.patch
