x86/rdrand: Disable RDSEED on AMD Cyan Skillfish (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10205,6 +10205,7 @@
 	patches.suse/drm-gem-Fix-race-in-drm_gem_handle_create_tail.patch
 	patches.suse/maple_tree-fix-mt_destroy_walk-on-root-leaf-node.patch
 	patches.suse/kasan-remove-kasan_find_vm_area-to-prevent-possible-.patch
+	patches.suse/x86-rdrand-Disable-RDSEED-on-AMD-Cyan-Skillfish.patch
 	patches.suse/clk-scmi-Handle-case-where-child-clocks-are-initiali.patch
 	patches.suse/clk-imx-Fix-an-out-of-bounds-access-in-dispmix_csr_c.patch
 	patches.suse/dm-bufio-fix-sched-in-atomic-context.patch
