RDMA/uverbs: Add empty rdma_uattrs_has_raw_cap() declaration (git-fixes)

--- a/series.conf
+++ b/series.conf
@@ -10482,6 +10482,7 @@
 	patches.suse/RDMA-hns-Fix-accessing-uninitialized-resources.patch
 	patches.suse/RDMA-hns-Drop-GFP_NOWARN.patch
 	patches.suse/RDMA-hns-Fix-Wframe-larger-than-issue.patch
+	patches.suse/RDMA-uverbs-Add-empty-rdma_uattrs_has_raw_cap-declar.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
