RDMA/mlx5: Fix compilation warning when USER_ACCESS isn't set (git-fixes)

--- a/series.conf
+++ b/series.conf
@@ -32056,6 +32056,7 @@
 	patches.suse/virtiofs-add-filesystem-context-source-name-check.patch
 	patches.suse/hfs-hfsplus-fix-slab-out-of-bounds-in-hfs_bnode_read_key.patch
 	patches.suse/RDMA-usnic-Fix-passing-zero-to-PTR_ERR-in-usnic_ib_p.patch
+	patches.suse/RDMA-mlx5-Fix-compilation-warning-when-USER_ACCESS-i.patch
 	patches.suse/RDMA-hns-Fix-wrong-maximum-DMA-segment-size.patch
 	patches.suse/RDMA-cma-Fix-workqueue-crash-in-cma_netevent_work_ha.patch
 	patches.suse/RDMA-core-Silence-oversized-kvmalloc-warning.patch
