--- a/series.conf
+++ b/series.conf
@@ -33274,6 +33274,7 @@
 	patches.suse/RDMA-hns-Fix-accessing-uninitialized-resources.patch
 	patches.suse/RDMA-hns-Drop-GFP_NOWARN.patch
 	patches.suse/RDMA-hns-Fix-Wframe-larger-than-issue.patch
+	patches.suse/RDMA-uverbs-Add-empty-rdma_uattrs_has_raw_cap-declar.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
