--- a/series.conf
+++ b/series.conf
@@ -33274,6 +33274,7 @@
 	patches.suse/crypto-qat-disable-ZUC-256-capability-for-QAT-GEN5.patch
 	patches.suse/crypto-qat-flush-misc-workqueue-during-device-shutdo.patch
 	patches.suse/crypto-qat-fix-DMA-direction-for-compression-on-GEN2.patch
+	patches.suse/crypto-qat-fix-seq_file-position-update-in-adf_ring_.patch
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
 	patches.suse/scsi-lpfc-Update-debugfs-trace-ring-initialization-m.patch
 	patches.suse/scsi-lpfc-Check-for-hdwq-null-ptr-when-cleaning-up-l.patch
