mtd: spinand: propagate spinand_wait() errors from spinand_write_page() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33316,6 +33316,7 @@
 	patches.suse/mtd-rawnand-atmel-Fix-dma_mapping_error-address.patch
 	patches.suse/mtd-rawnand-rockchip-Add-missing-check-after-DMA-map.patch
 	patches.suse/mtd-rawnand-fsmc-Add-missing-check-after-DMA-map.patch
+	patches.suse/mtd-spinand-propagate-spinand_wait-errors-from-spina.patch
 
 	########################################################
 	# end of sorted patches
