crypto: ccp - Fix crash when rebind ccp device for ccp.ko (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33267,6 +33267,7 @@
 	patches.suse/crypto-arm-aes-neonbs-work-around-gcc-15-warning.patch
 	patches.suse/crypto-ccp-Fix-locking-on-alloc-failure-handling.patch
 	patches.suse/crypto-inside-secure-Fix-dma_unmap_sg-nents-value.patch
+	patches.suse/crypto-ccp-Fix-crash-when-rebind-ccp-device-for-ccp..patch
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
 	patches.suse/scsi-lpfc-Update-debugfs-trace-ring-initialization-m.patch
 	patches.suse/scsi-lpfc-Check-for-hdwq-null-ptr-when-cleaning-up-l.patch
