--- a/series.conf
+++ b/series.conf
@@ -33288,6 +33288,7 @@
 	patches.suse/scsi-lpfc-Modify-end-of-life-adapters-model-descript.patch
 	patches.suse/scsi-lpfc-Update-lpfc-version-to-14.4.0.10.patch
 	patches.suse/scsi-lpfc-Copyright-updates-for-14.4.0.10-patches.patch
+	patches.suse/media-uvcvideo-Fix-1-byte-out-of-bounds-read-in-uvc_.patch
 
 	########################################################
 	# end of sorted patches
