--- a/series.conf
+++ b/series.conf
@@ -33315,6 +33315,7 @@
 	patches.suse/mtd-rawnand-renesas-Add-missing-check-after-DMA-map.patch
 	patches.suse/mtd-rawnand-atmel-Fix-dma_mapping_error-address.patch
 	patches.suse/mtd-rawnand-rockchip-Add-missing-check-after-DMA-map.patch
+	patches.suse/mtd-rawnand-fsmc-Add-missing-check-after-DMA-map.patch
 
 	########################################################
 	# end of sorted patches
