media: v4l2-ctrls: Fix H264 SEPARATE_COLOUR_PLANE check (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33293,6 +33293,7 @@
 	patches.suse/media-gspca-Add-bounds-checking-to-firmware-parser.patch
 	patches.suse/media-rainshadow-cec-fix-TOCTOU-race-condition-in-ra.patch
 	patches.suse/media-imx-fix-a-potential-memory-leak-in-imx_media_c.patch
+	patches.suse/media-v4l2-ctrls-Fix-H264-SEPARATE_COLOUR_PLANE-chec.patch
 
 	########################################################
 	# end of sorted patches
