--- a/series.conf
+++ b/series.conf
@@ -33314,6 +33314,7 @@
 	patches.suse/mtd-spi-nor-Fix-spi_nor_try_unlock_all.patch
 	patches.suse/mtd-rawnand-renesas-Add-missing-check-after-DMA-map.patch
 	patches.suse/mtd-rawnand-atmel-Fix-dma_mapping_error-address.patch
+	patches.suse/mtd-rawnand-rockchip-Add-missing-check-after-DMA-map.patch
 
 	########################################################
 	# end of sorted patches
