crypto: ccp - Fix locking on alloc failure handling (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33265,6 +33265,7 @@
 	patches.suse/crypto-qat-allow-enabling-VFs-in-the-absence-of-IOMM.patch
 	patches.suse/crypto-qat-fix-state-restore-for-banks-with-exceptio.patch
 	patches.suse/crypto-arm-aes-neonbs-work-around-gcc-15-warning.patch
+	patches.suse/crypto-ccp-Fix-locking-on-alloc-failure-handling.patch
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
 	patches.suse/scsi-lpfc-Update-debugfs-trace-ring-initialization-m.patch
 	patches.suse/scsi-lpfc-Check-for-hdwq-null-ptr-when-cleaning-up-l.patch
