media: vivid: fix wrong pixel_array control size (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33300,6 +33300,7 @@
 	patches.suse/media-venus-protect-against-spurious-interrupts-duri.patch
 	patches.suse/media-venus-Add-a-check-for-packet-size-after-readin.patch
 	patches.suse/media-venus-hfi-explicitly-release-IRQ-during-teardo.patch
+	patches.suse/media-vivid-fix-wrong-pixel_array-control-size.patch
 
 	########################################################
 	# end of sorted patches
