--- a/series.conf
+++ b/series.conf
@@ -33291,6 +33291,7 @@
 	patches.suse/media-uvcvideo-Fix-1-byte-out-of-bounds-read-in-uvc_.patch
 	patches.suse/media-usbtv-Lock-resolution-while-streaming.patch
 	patches.suse/media-gspca-Add-bounds-checking-to-firmware-parser.patch
+	patches.suse/media-rainshadow-cec-fix-TOCTOU-race-condition-in-ra.patch
 
 	########################################################
 	# end of sorted patches
