mtd: spi-nor: Fix spi_nor_try_unlock_all() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33311,6 +33311,7 @@
 	patches.suse/clk-clk-axi-clkgen-fix-fpfd_max-frequency-for-zynq.patch
 	patches.suse/clk-sunxi-ng-v3s-Fix-de-clock-definition.patch
 	patches.suse/mtd-fix-possible-integer-overflow-in-erase_xfer.patch
+	patches.suse/mtd-spi-nor-Fix-spi_nor_try_unlock_all.patch
 
 	########################################################
 	# end of sorted patches
