pwm: imx-tpm: Reset counter if CMOD is 0 (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33304,6 +33304,7 @@
 	patches.suse/media-hi556-correct-the-test-pattern-configuration.patch
 	patches.suse/media-ov2659-Fix-memory-leaks-in-ov2659_probe.patch
 	patches.suse/media-uvcvideo-Do-not-mark-valid-metadata-as-invalid.patch
+	patches.suse/pwm-imx-tpm-Reset-counter-if-CMOD-is-0.patch
 
 	########################################################
 	# end of sorted patches
