mtd: rawnand: atmel: set pmecc data setup time (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33317,6 +33317,7 @@
 	patches.suse/mtd-rawnand-rockchip-Add-missing-check-after-DMA-map.patch
 	patches.suse/mtd-rawnand-fsmc-Add-missing-check-after-DMA-map.patch
 	patches.suse/mtd-spinand-propagate-spinand_wait-errors-from-spina.patch
+	patches.suse/mtd-rawnand-atmel-set-pmecc-data-setup-time.patch
 
 	########################################################
 	# end of sorted patches
