--- a/series.conf
+++ b/series.conf
@@ -33262,6 +33262,7 @@
 	patches.suse/crypto-sun8i-ce-fix-nents-passed-to-dma_unmap_sg.patch
 	patches.suse/crypto-qat-use-unmanaged-allocation-for-dc_data.patch
 	patches.suse/crypto-marvell-cesa-Fix-engine-load-inaccuracy.patch
+	patches.suse/crypto-qat-allow-enabling-VFs-in-the-absence-of-IOMM.patch
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
 	patches.suse/scsi-lpfc-Update-debugfs-trace-ring-initialization-m.patch
 	patches.suse/scsi-lpfc-Check-for-hdwq-null-ptr-when-cleaning-up-l.patch
