--- a/series.conf
+++ b/series.conf
@@ -33264,6 +33264,7 @@
 	patches.suse/crypto-marvell-cesa-Fix-engine-load-inaccuracy.patch
 	patches.suse/crypto-qat-allow-enabling-VFs-in-the-absence-of-IOMM.patch
 	patches.suse/crypto-qat-fix-state-restore-for-banks-with-exceptio.patch
+	patches.suse/crypto-arm-aes-neonbs-work-around-gcc-15-warning.patch
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
 	patches.suse/scsi-lpfc-Update-debugfs-trace-ring-initialization-m.patch
 	patches.suse/scsi-lpfc-Check-for-hdwq-null-ptr-when-cleaning-up-l.patch
