--- a/series.conf
+++ b/series.conf
@@ -33302,6 +33302,7 @@
 	patches.suse/media-venus-hfi-explicitly-release-IRQ-during-teardo.patch
 	patches.suse/media-vivid-fix-wrong-pixel_array-control-size.patch
 	patches.suse/media-hi556-correct-the-test-pattern-configuration.patch
+	patches.suse/media-ov2659-Fix-memory-leaks-in-ov2659_probe.patch
 
 	########################################################
 	# end of sorted patches
