--- a/series.conf
+++ b/series.conf
@@ -33303,6 +33303,7 @@
 	patches.suse/media-vivid-fix-wrong-pixel_array-control-size.patch
 	patches.suse/media-hi556-correct-the-test-pattern-configuration.patch
 	patches.suse/media-ov2659-Fix-memory-leaks-in-ov2659_probe.patch
+	patches.suse/media-uvcvideo-Do-not-mark-valid-metadata-as-invalid.patch
 
 	########################################################
 	# end of sorted patches
