--- a/series.conf
+++ b/series.conf
@@ -33299,6 +33299,7 @@
 	patches.suse/media-venus-venc-Clamp-param-smaller-than-1fps-and-b.patch
 	patches.suse/media-venus-protect-against-spurious-interrupts-duri.patch
 	patches.suse/media-venus-Add-a-check-for-packet-size-after-readin.patch
+	patches.suse/media-venus-hfi-explicitly-release-IRQ-during-teardo.patch
 
 	########################################################
 	# end of sorted patches
