mtd: rawnand: renesas: Add missing check after DMA map (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33312,6 +33312,7 @@
 	patches.suse/clk-sunxi-ng-v3s-Fix-de-clock-definition.patch
 	patches.suse/mtd-fix-possible-integer-overflow-in-erase_xfer.patch
 	patches.suse/mtd-spi-nor-Fix-spi_nor_try_unlock_all.patch
+	patches.suse/mtd-rawnand-renesas-Add-missing-check-after-DMA-map.patch
 
 	########################################################
 	# end of sorted patches
