clk: clk-axi-clkgen: fix fpfd_max frequency for zynq (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33308,6 +33308,7 @@
 	patches.suse/hwmon-gsc-hwmon-fix-fan-pwm-setpoint-show-functions.patch
 	patches.suse/clk-davinci-Add-NULL-check-in-davinci_lpsc_clk_regis.patch
 	patches.suse/clk-xilinx-vcu-unregister-pll_post-only-if-registere.patch
+	patches.suse/clk-clk-axi-clkgen-fix-fpfd_max-frequency-for-zynq.patch
 
 	########################################################
 	# end of sorted patches
