media: venus: Add a check for packet size after reading from shared memory (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33298,6 +33298,7 @@
 	patches.suse/media-venus-vdec-Clamp-param-smaller-than-1fps-and-b.patch
 	patches.suse/media-venus-venc-Clamp-param-smaller-than-1fps-and-b.patch
 	patches.suse/media-venus-protect-against-spurious-interrupts-duri.patch
+	patches.suse/media-venus-Add-a-check-for-packet-size-after-readin.patch
 
 	########################################################
 	# end of sorted patches
