hwmon: (gsc-hwmon) fix fan pwm setpoint show functions (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33305,6 +33305,7 @@
 	patches.suse/media-ov2659-Fix-memory-leaks-in-ov2659_probe.patch
 	patches.suse/media-uvcvideo-Do-not-mark-valid-metadata-as-invalid.patch
 	patches.suse/pwm-imx-tpm-Reset-counter-if-CMOD-is-0.patch
+	patches.suse/hwmon-gsc-hwmon-fix-fan-pwm-setpoint-show-functions.patch
 
 	########################################################
 	# end of sorted patches
