--- a/series.conf
+++ b/series.conf
@@ -33307,6 +33307,7 @@
 	patches.suse/pwm-imx-tpm-Reset-counter-if-CMOD-is-0.patch
 	patches.suse/hwmon-gsc-hwmon-fix-fan-pwm-setpoint-show-functions.patch
 	patches.suse/clk-davinci-Add-NULL-check-in-davinci_lpsc_clk_regis.patch
+	patches.suse/clk-xilinx-vcu-unregister-pll_post-only-if-registere.patch
 
 	########################################################
 	# end of sorted patches
