clk: sunxi-ng: v3s: Fix de clock definition (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33309,6 +33309,7 @@
 	patches.suse/clk-davinci-Add-NULL-check-in-davinci_lpsc_clk_regis.patch
 	patches.suse/clk-xilinx-vcu-unregister-pll_post-only-if-registere.patch
 	patches.suse/clk-clk-axi-clkgen-fix-fpfd_max-frequency-for-zynq.patch
+	patches.suse/clk-sunxi-ng-v3s-Fix-de-clock-definition.patch
 
 	########################################################
 	# end of sorted patches
