--- a/series.conf
+++ b/series.conf
@@ -33268,6 +33268,7 @@
 	patches.suse/crypto-ccp-Fix-locking-on-alloc-failure-handling.patch
 	patches.suse/crypto-inside-secure-Fix-dma_unmap_sg-nents-value.patch
 	patches.suse/crypto-ccp-Fix-crash-when-rebind-ccp-device-for-ccp..patch
+	patches.suse/hwrng-mtk-handle-devm_pm_runtime_enable-errors.patch
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
 	patches.suse/scsi-lpfc-Update-debugfs-trace-ring-initialization-m.patch
 	patches.suse/scsi-lpfc-Check-for-hdwq-null-ptr-when-cleaning-up-l.patch
