--- a/series.conf
+++ b/series.conf
@@ -33290,6 +33290,7 @@
 	patches.suse/scsi-lpfc-Copyright-updates-for-14.4.0.10-patches.patch
 	patches.suse/media-uvcvideo-Fix-1-byte-out-of-bounds-read-in-uvc_.patch
 	patches.suse/media-usbtv-Lock-resolution-while-streaming.patch
+	patches.suse/media-gspca-Add-bounds-checking-to-firmware-parser.patch
 
 	########################################################
 	# end of sorted patches
