media: venus: protect against spurious interrupts during probe (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33297,6 +33297,7 @@
 	patches.suse/media-v4l2-ctrls-Don-t-reset-handler-s-error-in-v4l2.patch
 	patches.suse/media-venus-vdec-Clamp-param-smaller-than-1fps-and-b.patch
 	patches.suse/media-venus-venc-Clamp-param-smaller-than-1fps-and-b.patch
+	patches.suse/media-venus-protect-against-spurious-interrupts-duri.patch
 
 	########################################################
 	# end of sorted patches
