mtd: fix possible integer overflow in erase_xfer() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33310,6 +33310,7 @@
 	patches.suse/clk-xilinx-vcu-unregister-pll_post-only-if-registere.patch
 	patches.suse/clk-clk-axi-clkgen-fix-fpfd_max-frequency-for-zynq.patch
 	patches.suse/clk-sunxi-ng-v3s-Fix-de-clock-definition.patch
+	patches.suse/mtd-fix-possible-integer-overflow-in-erase_xfer.patch
 
 	########################################################
 	# end of sorted patches
