crypto: qat - use unmanaged allocation for dc_data (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33260,6 +33260,7 @@
 	patches.suse/fbcon-Fix-outdated-registered_fb-reference-in-commen.patch
 	patches.suse/drm-amd-pm-powerplay-hwmgr-smu_helper-fix-order-of-m.patch
 	patches.suse/crypto-sun8i-ce-fix-nents-passed-to-dma_unmap_sg.patch
+	patches.suse/crypto-qat-use-unmanaged-allocation-for-dc_data.patch
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
 	patches.suse/scsi-lpfc-Update-debugfs-trace-ring-initialization-m.patch
 	patches.suse/scsi-lpfc-Check-for-hdwq-null-ptr-when-cleaning-up-l.patch
