x86/cpu/amd: Fix workaround for erratum 1054 (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -32116,6 +32116,7 @@
 	patches.suse/string-Add-load_unaligned_zeropad-code-path-to-sized.patch
 	patches.suse/PCI-MSI-Add-an-option-to-write-MSIX-ENTRY_DATA-befor.patch
 	patches.suse/net-niu-Niu-requires-MSIX-ENTRY_DATA-fields-touch-be.patch
+	patches.suse/x86-cpu-amd-Fix-workaround-for-erratum-1054.patch
 	patches.suse/nfs-add-missing-selections-of-CONFIG_CRC32.patch
 	patches.suse/nfsd-decrease-sc_count-directly-if-fail-to-queue-dl_recall.patch
 	patches.suse/i2c-cros-ec-tunnel-defer-probe-if-parent-EC-is-not-p.patch
