--- a/series.conf
+++ b/series.conf
@@ -33008,6 +33008,7 @@
 	patches.suse/drm-bridge-ti-sn65dsi86-Add-HPD-for-DisplayPort-conn.patch
 	patches.suse/i2c-robotfuzz-osif-disable-zero-length-read-messages.patch
 	patches.suse/i2c-tiny-usb-disable-zero-length-read-messages.patch
+	patches.suse/x86-traps-Initialize-DR6-by-writing-its-architectural-rese.patch
 	patches.suse/vt-add-missing-notification-when-switching-back-to-t.patch
 	patches.suse/serial-imx-Restore-original-RXTL-for-console-to-fix-.patch
 	patches.suse/staging-rtl8723bs-Avoid-memset-in-aes_cipher-and-aes.patch
