--- a/series.conf
+++ b/series.conf
@@ -33080,6 +33080,7 @@
 	patches.suse/Revert-ACPI-battery-negate-current-when-discharging.patch
 	patches.suse/powercap-intel_rapl-Do-not-change-CLAMPING-bit-if-EN.patch
 	patches.suse/i2c-designware-Fix-an-initialization-issue.patch
+	patches.suse/x86-mce-amd-Add-default-names-for-MCA-banks-and-blocks.patch
 	patches.suse/x86-bugs-Add-a-Transient-Scheduler-Attacks-mitigation.patch
 	patches.suse/KVM-SVM-Advertise-TSA-CPUID-bits-to-guests.patch
 	patches.suse/x86-process-Move-the-buffer-clearing-before-MONITOR.patch
