--- a/series.conf
+++ b/series.conf
@@ -33080,6 +33080,7 @@
 	patches.suse/Revert-ACPI-battery-negate-current-when-discharging.patch
 	patches.suse/powercap-intel_rapl-Do-not-change-CLAMPING-bit-if-EN.patch
 	patches.suse/i2c-designware-Fix-an-initialization-issue.patch
+	patches.suse/x86-mce-Don-t-remove-sysfs-if-thresholding-sysfs-init-fail.patch
 	patches.suse/x86-mce-amd-Add-default-names-for-MCA-banks-and-blocks.patch
 	patches.suse/x86-mce-Make-sure-CMCI-banks-are-cleared-during-shutdown-o.patch
 	patches.suse/x86-bugs-Add-a-Transient-Scheduler-Attacks-mitigation.patch
