x86/mce/amd: Fix threshold limit reset (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33082,6 +33082,7 @@
 	patches.suse/i2c-designware-Fix-an-initialization-issue.patch
 	patches.suse/x86-mce-Don-t-remove-sysfs-if-thresholding-sysfs-init-fail.patch
 	patches.suse/x86-mce-amd-Add-default-names-for-MCA-banks-and-blocks.patch
+	patches.suse/x86-mce-amd-Fix-threshold-limit-reset.patch
 	patches.suse/x86-mce-Make-sure-CMCI-banks-are-cleared-during-shutdown-o.patch
 	patches.suse/x86-bugs-Add-a-Transient-Scheduler-Attacks-mitigation.patch
 	patches.suse/KVM-SVM-Advertise-TSA-CPUID-bits-to-guests.patch
