--- a/series.conf
+++ b/series.conf
@@ -10483,6 +10483,7 @@
 	patches.suse/crypto-qat-flush-misc-workqueue-during-device-shutdo.patch
 	patches.suse/crypto-qat-fix-DMA-direction-for-compression-on-GEN2.patch
 	patches.suse/crypto-qat-fix-seq_file-position-update-in-adf_ring_.patch
+	patches.suse/mfd-cros_ec-Separate-charge-control-probing-from-USB.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
