media: vivid: fix wrong pixel_array control size (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10505,6 +10505,7 @@
 	patches.suse/media-venus-hfi-explicitly-release-IRQ-during-teardo.patch
 	patches.suse/media-venus-Fix-MSM8998-frequency-table.patch
 	patches.suse/media-qcom-camss-cleanup-media-device-allocated-reso.patch
+	patches.suse/media-vivid-fix-wrong-pixel_array-control-size.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
