--- a/series.conf
+++ b/series.conf
@@ -10468,6 +10468,7 @@
 	patches.suse/drm-amdgpu-gfx10-fix-kiq-locking-in-KCQ-reset.patch
 	patches.suse/crypto-sun8i-ce-fix-nents-passed-to-dma_unmap_sg.patch
 	patches.suse/crypto-qat-use-unmanaged-allocation-for-dc_data.patch
+	patches.suse/crypto-marvell-cesa-Fix-engine-load-inaccuracy.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
