media: venus: Fix MSM8998 frequency table (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10503,6 +10503,7 @@
 	patches.suse/media-venus-Add-a-check-for-packet-size-after-readin.patch
 	patches.suse/media-venus-Fix-OOB-read-due-to-missing-payload-boun.patch
 	patches.suse/media-venus-hfi-explicitly-release-IRQ-during-teardo.patch
+	patches.suse/media-venus-Fix-MSM8998-frequency-table.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
