--- a/series.conf
+++ b/series.conf
@@ -10487,6 +10487,7 @@
 	patches.suse/leds-flash-leds-qcom-flash-Fix-registry-access-after.patch
 	patches.suse/Revert-leds-trigger-netdev-Configure-LED-blink-inter.patch
 	patches.suse/media-uvcvideo-Fix-1-byte-out-of-bounds-read-in-uvc_.patch
+	patches.suse/media-usbtv-Lock-resolution-while-streaming.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
